# datathon-starter-abandoned

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  config.yml  conftest.py  docker-compose.yml  installdeps.sh  lockdeps.sh  pipeline.ini  pyproject.toml  pytest.ini  register_flows.py  requirements.txt  server.py  setup.cfg  setup.py
.github/: pull_request_template.md  test_server.yml
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---feature-request.md
.github/workflows/: codecov.yml  deploy_heroku.yml  test.yml
client/: app.py  client.ini  requirements.txt
client/results/: prefect-result-2021-03-27t06-52-01-908083-00-00  prefect-result-2021-03-27t06-52-02-022737-00-00
client/src/: client.py
client/tests/: test_app.py
configs/: pipeline.ini  pytest.ini
requirements/: client-requirements.in  client-requirements.txt  constraints.txt  dev-requirements.in  dev-requirements.txt  flows-requirements.in  flows-requirements.txt  requirements-client.txt  requirements-dev.txt  requirements-flow.txt  requirements-server.txt  server-requirements.in  server-requirements.txt
server/: Dockerfile  config.yml  pipeline.ini  pipeline.py  register.py  requirements.txt  tasks.py  utils.py
server/src/: pipeline.py  utils.py
server/src/flows/: __init__.py  data.py  e2e_pipeline.py  mock.py  mock_flow.py
server/src/tasks/: data.py  mock.py
server/src/tests/: test_flows.py  test_tasks.py
server/tests/: test_tasks.py
src/: pipeline.py  tasks.py  utils.py
src/tests/: test_app.py  test_tasks.py
