[metadata]
name = datathon-mlapp-starter

author = Christopher Lo
author_email = lochristopherhy@gmail.com
maintainer = Christopher Lo
maintainer_email = lochristopherhy@gmail.com

version = 0.0.1

description = Boilerplate for an end-to-end data app using Streamlit and Prefect.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = prefect, streamlit, boilerplate, starter-kit, mlops

url = https://github.com/topher-lo/datathon-mlapp-starter

license = MIT
classifiers =
        Development Status :: 2 - Pre-Alpha
        License :: OSI Approved :: MIT License
        Programming Language :: Python :: 3.8
        Intended Audience :: Developers

[options]
zip_safe = true
packages = find:
python_requires = == 3.8.0

[options.extras_require]
server =
    bokeh
    dask
    prefect

flows =
    scikit-learn
    statsmodels
    dask
    numpy
    pandas
    altair

client =
    missingno
    pandas
    prefect
    streamlit
    streamlit-pandas-profiling

dev =
    flake8
    pytest
    pytest-cov
    great_expectations